<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/nva_mynews" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/nva_like" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nva_setting" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nva_about" />
    </group>


    <item android:title="相关">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/nva_help" />
        </menu>
    </item>


</menu>
