<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Web">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/suggest_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/suggest_input_title1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/suggest_input1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:gravity="top"
        android:hint="@string/suggest_input_title1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/suggest_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/suggest_input_title2"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/suggest_input2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="top"
        android:hint="@string/suggest_input_title2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/suggest_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/suggest_btn"
        android:textColor="@color/btn_down"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="bottom|center"
        android:text="@string/suggest_text"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

</LinearLayout>