<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/setting_title_text01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_title01"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:background="@color/line_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_item_02"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting_text01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setting_sound"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/setting_text02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/setting_dec01"
                android:textColor="@color/line_color"
                android:textSize="12sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:background="@color/line_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Switch
                android:id="@+id/setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:focusable="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="1dp"
                android:background="@color/line_color" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_item_04"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/setting_text03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_clearcache"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:background="@color/line_color" />

    </LinearLayout>


</RelativeLayout>