<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mydata_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical"
    tools:context="com.firebig.activity.Activity_About">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/data_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/userdata_header"
            android:textColor="@color/text_color"
            android:textSize="18sp" />


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/userdata_header"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            fresco:actualImageScaleType="fitXY"
            fresco:placeholderImage="@drawable/ic_header_loading"
            fresco:roundAsCircle="true"
            fresco:roundingBorderColor="@color/line_color"
            fresco:roundingBorderWidth="1dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/data_account"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/accc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/userdata_account"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="headr"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userdata_input01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/accc"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/data_name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/accc02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/userdata_username"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="headr"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userdata_input02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/accc02"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/data_singture"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/accc03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="注册时间"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="headr"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userdata_input03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/accc03"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:gravity="center_vertical"
        android:text="@string/userdata_sofa"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/data_updatepass"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/userdata_updatepass"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/bg"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone">

        <TextView
            android:id="@+id/data_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/forget_password"
            android:textSize="18sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="20dp"
        android:background="@color/line_color"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/exit_layout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/setting_exitapp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/app_exit"
            android:textColor="#f75c5c"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"

            android:background="@color/line_color" />
    </LinearLayout>


</LinearLayout>